Completed the exercise